[package]
name = "hailo"
version = "0.1.0"
authors = ["Noh Byungkuk <raynear@gmail.com>"]
edition = "2018"

[lib]
# name = "hailo"
# path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

# [features]
# default = ["console_error_panic_hook"]

[unstable]
build-std = ['std', 'panic_about']

[build]
target = "wasm32-unknown-unknown"
rustflags = "-C target-feature=+atomics,+bulk-memory,+mutable-globals"

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
halo2_proofs = "0.3.0"
#halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git" }
js-sys = "0.3.68"
getrandom = { version = "0.2", features = ["js"] }
group = "0.13.0"
rand_core = "0.6.4"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
